Fix up buttons and spacing in poll-details

--- a/public/scss/_nav-bar.scss
+++ b/public/scss/_nav-bar.scss
@@ -1,9 +1,16 @@
-// Add padding to top so there is no overlap with nav bar
-// body {
-//   padding-top: 60px;
-// }
-// No padding on top if on phone screen because gap is created on phone screens
-// @media screen and (max-width: 768px) {
-//     body { padding-top: 0px; }
-// }
+.navbar-inverse {
+  // background-color: #333;
+  border: none;
+}
 
+.navbar-btn {
+  margin-right: 8px;
+  margin-left: 8px;
+}
+
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:hover,
+.navbar-inverse .navbar-nav > .active > a:focus {
+  color: #fff;
+  background-color: teal;
+}
