--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,31 +1,16 @@
 
 @import 'nav-bar';
 @import 'new-poll';
+@import 'poll-details';
 
 body {
   background-color: #333;
   color: white;
 }
 
+// Panel in every page
 .container {
   background-color: black;
   border: none;
-}
-
-.navbar-inverse {
-  // background-color: #333;
-  border: none;
-}
-
-.navbar-btn {
-  margin-right: 8px;
-  margin-left: 8px;
-}
-
-.navbar-inverse .navbar-nav > .active > a,
-.navbar-inverse .navbar-nav > .active > a:hover,
-.navbar-inverse .navbar-nav > .active > a:focus {
-  color: #fff;
-  background-color: teal;
 }
 
